# src/modules/purchases/domain/dtos/IResponsePurchaseDTO.ts
@@ -1,0 +1,7 @@
+export default interface IResponsePurchaseDTO {
+  id: string
+  product_id: string
+  amount: number
+  price_unitary: number
+  price_total: number
+}
