# src/modules/purchases/infrastructure/http/validators/CreatePurchaseValidator.ts
@@ -1,0 +1,8 @@
+import { celebrate, Segments, Joi } from 'celebrate'
+
+export default celebrate({
+  [Segments.BODY]: {
+    product_id: Joi.string().uuid().required(),
+    amount: Joi.number().positive().required(),
+  },
+})
